--- a/style.css
+++ b/style.css
@@ -227,7 +227,7 @@ body,html{
     font-family: Sans-serif;
     font-size: 180px;
     font-weight: 400;
-    line-height: 243px;
+    /* line-height: 243px; */
     letter-spacing: -0.12em;
     color: #fff;
     text-align: center;
