--- a/style.css
+++ b/style.css
@@ -25,6 +25,16 @@ body,html{
     width: 100%;
 }
 
+.cursor{
+    width: 15px;
+    pointer-events: none;
+    position: absolute;
+    z-index: 99;
+    height: 15px;
+    background-color: #D9FF06;
+    border-radius: 50%;
+}
+
 .logo{
     height: 70px;
     width: 70px;
@@ -136,6 +146,29 @@ body,html{
 .block{
     position: relative;
     top: 65px;
+}
+
+.firstline{
+    overflow: hidden;
+}
+
+.secondline{
+    overflow-x: hidden;
+    overflow-y: visible;
+    padding-bottom: 40px;
+    margin-top: -20px;
+}
+
+.thirdline{
+    margin-top: -40px;
+    padding-bottom: 40px;
+    overflow: hidden;
+}
+
+.fourthline{
+    margin-top: -40px;
+    overflow: hidden;
+    padding-bottom: 40px;
 }
 
 .section2{
