--- a/style.css
+++ b/style.css
@@ -111,25 +111,19 @@ body,html{
 .page1{
     height: 100%;
     width: 100%;
-    /* background-color: red; */
 }
 
 
 .sliding-txt{
     height: 100%;
     width: 95%;
-    /* background-color: aqua; */
     margin-left: 70px;
-    /* padding-top: 60px; */
-
 }
 
 .sliding-txt h1{
     margin-left: -5px;
     color: white;
     mix-blend-mode: difference;
-    /* overflow: hidden; */
-    /* overflow-y: hidden; */
 }
 
 .sliding-txt h1 span{
@@ -881,3 +875,392 @@ body,html{
     font-weight: 200;
 }
 
+
+@media (max-width:640px) {
+    .cursor{
+        display: none;
+    }
+
+    .main{
+        display: none;
+    }
+
+    .res-main{
+        width: 100vw;
+        height: 100vh;
+        overflow-x: hidden;
+    }
+
+    .res-logo{
+        height: 60px;
+        width: 50px;
+        margin-top: 7px;
+        position: fixed;
+        z-index: 99;
+    }
+
+    .res-logo img{
+        height: 100%; 
+    } 
+
+    .res-email{
+        position: fixed;
+        left: -75px;
+        bottom: 125px;
+        transform: rotate(-90deg);
+        z-index: 99;
+        mix-blend-mode: difference;
+    }
+    
+    .res-email a{
+        font-size: 20px;
+        background-color: transparent;
+        color: #fff;
+        text-decoration: none;
+        font-family: china;
+        font-weight: 400;
+    }
+
+    .res-bgimage{
+        background-color: #000;
+        height: 85vh;
+        /* width: 100vw; */
+        background-image: url("Accets/images/brandium\ girl.jpg");
+        background-position: 10% -182px;
+        background-repeat: no-repeat;
+        background-size: 718px auto;
+        z-index: 88;
+    }
+
+    .res-sliding-txt{
+        height: 100%;
+        width: 95%;
+        margin-left: 30px;
+        position: relative;
+        top: 180px;
+    }
+    
+    .res-sliding-txt h1{
+        color: white;
+        mix-blend-mode: difference;
+    }
+    
+    .res-sliding-txt h1 span{
+        font-family: sans-serif;
+        font-size: 16vw;
+        font-weight: 300;
+        line-height: 0.85em;
+        color: #fff;
+        mix-blend-mode: difference;
+        letter-spacing: -9.2px;
+    }
+
+    .res-block{
+        position: relative;
+        top: 65px;
+    }
+    
+    .res-firstline{
+        overflow: hidden;
+    }
+    
+    .res-secondline{
+        overflow-x: hidden;
+        overflow-y: visible;
+        padding-bottom: 40px;
+        margin-top: -20px;
+    }
+    
+    .res-thirdline{
+        margin-top: -60px;
+        padding-bottom: 40px;
+        overflow: hidden;
+    }
+    
+    .res-fourthline{
+        margin-top: -40px;
+        overflow: hidden;
+        padding-bottom: 40px;
+    }
+    
+    .res-section2{
+        height: 174vh;
+        margin-top: -80px;
+        width: screen;
+        background-color: #0f0f0f;
+        border-radius: 2em 2em 0 0;
+    }
+    
+    .res-para{
+        position: relative;
+        top: 105px;
+        padding-left: 45px;
+    }
+    
+    .res-what{
+        color: #D9FF06;
+        font-family: sans-serif;
+        font-size: 18px;
+        font-weight: 300;
+        letter-spacing: 0.01em;
+    }
+    
+    .res-description{
+        position: relative;
+        width: 100vw;
+        padding-left: 45px;
+        top: 125px;
+    }
+    
+    .res-description h1{
+        color: #fff;
+        font-family:sans-serif;
+        font-size: 8vw;
+        font-weight: 100;
+        line-height: 1.2em;
+        letter-spacing: -4px;
+    }
+    
+    .res-btn{
+        position: relative;
+        top: 180px;
+        display: flex;
+        align-items: center;
+        padding-left: 45px;
+    }
+    
+    .res-btn a{
+        font-size: 18px;
+        font-weight: 200;
+        text-decoration: none;
+        color: #0f0f0f;
+        font-family:sans-serif;
+        padding: 15px 25px;
+        border-radius: 50px;
+        background-color: white;
+        display: flex;
+        align-items: center;
+    }
+    
+    .res-btn a::after{
+        content: "";
+        border-radius: 50%;
+        display: inline-block;
+        background-color: #D9FF06;
+        height: 12px;
+        width: 12px;
+        background-position: 0 0px, -15px -15px;
+        background-repeat: no-repeat;
+        background-size: contain;
+        vertical-align: middle;
+        opacity: 1;
+        transition: opacity 0.5s cubic-bezier(0.84, -0.01, 0.25, 0.99);
+        margin-left: 22px;
+        animation-name: buttonArrow;
+        animation-duration: 0.7s;
+        animation-iteration-count: infinite;
+    }
+
+    .line span{
+        display: inline-block;
+        width: 80vw;
+        margin-top: 350px;
+        margin-left: 10vw;
+        height: 1px;
+        background-color: #F9F7F4;
+    }
+
+    .res-section3{
+        height: 440vh;
+        width: 100vw;
+        background-color: #0f0f0f;
+        margin-top: -280px;
+    }
+    
+    .res-featured-txt h1{
+        font-family: Sans-serif;
+        font-size: 60px;
+        font-weight: 400;
+        letter-spacing: -0.12em;
+        color: #fff;
+        text-align: center;
+    }
+    
+    .res-feature-container{
+        height: auto;
+        width: 100vw;
+        background-color: #0f0f0f;
+    }
+    
+    .res-inner-container1{
+        height: 100vh;
+        width: 100vw;
+    }
+    
+    .res-left{
+        height: 100%;
+        width: 90vw;
+        margin: auto;
+        border-radius: 30px;
+        background-image: url("Accets/images/phone.webp");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        cursor: pointer;
+    }
+    
+    .res-right{
+        height: 100%;
+        background-color: #F3F3F3;
+        width: 90vw;
+        border-radius: 30px;
+        margin-right: 30px;
+        cursor: pointer;
+        margin: auto;
+    }
+    
+    .res-video{
+        height: 100vh;
+        margin-top: 200px;
+        width: 90vw;
+        overflow: hidden;
+        border-radius: 30px;
+        background-position: center;
+    }
+    
+    .res-video video{
+        height: 150vh;
+        width: 90vw;
+        object-fit: contain;
+        object-position: 500% 20%;
+    }
+    
+    .res-content-container{
+        width: 100vw;
+        height: 15vh;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    
+    .res-left-content{
+        height: auto;
+        width: 90vw;
+        margin-left: 20px;
+    }
+
+    .res-left-all-cont{
+        height: 100vh;
+        width: 100vw;
+    }
+    
+    .res-left-content h1{
+        color: #fff;
+        font-family: china;
+        font-weight: 200;
+        font-size: 25px;
+        margin-top: 5px;
+    }
+    
+    .res-left-content h3{
+        color: #969696;
+        font-family: sans-serif;
+        font-weight: 200;
+        font-size: 18px;
+        margin-top: 10px;
+    }
+
+    .res-right-all-cont{
+        height: auto;
+        width: auto;
+    }
+    
+    .res-right-content{
+        height: 100%;
+        width: 90vw;
+        margin-right: 30px;
+        margin-top: 300px;
+    }
+    
+    .res-right-content h1{
+        color: #fff;
+        font-family: china;
+        font-weight: 200;
+        font-size: 30px;
+        margin-top: 5px;
+    }
+    
+    .res-right-content h3{
+        color: #969696;
+        font-family: sans-serif;
+        font-weight: 200;
+        font-size: 18px;
+        margin-top: 10px;
+    }
+    
+    .res-second{
+        margin-top: 00px;
+    }
+    
+    .res-img1{
+        height: 100%;
+        width: 45vw;
+        border-radius: 30px;
+        margin-left: 10px;
+        background-image: url("Accets/images/photo2.webp");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        cursor: pointer;
+    }
+    
+    .res-img2{
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-image: url("Accets/images/photo32.jpg");
+    }
+    
+    .res-more{
+        height: 150vh;
+        width: 100vw;
+        background-color: #0f0f0f;
+        display: flex;
+        align-items: center;
+        margin-top: -350px;
+    }
+    
+    .res-left-para{
+        height: 100%;
+        width: 50vw;
+        padding-left: 15px;
+    }
+    
+    .res-left-para h1{
+        font-family: sans-serif;
+        font-size: 33px;
+        color: #fff;
+        letter-spacing: -0.15em;
+        font-weight: 100;
+        line-height: 1em;
+        white-space: nowrap;
+    }
+    
+    .res-right-btn{
+        height: 100%;
+        width: 50vw;
+    }
+    
+    .res-btn1{
+        position: relative;
+        z-index: 2;
+        top: 18vh;
+        left: 28.5vw;
+    }
+    
+    .res-para-btn{
+        display: flex;
+        align-items: center;
+    }
+    
+}
