--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@
 body,html{
     width: 100vw;
     height: 100vh;
+    overflow-x: hidden;
 }
 
 .main{
@@ -197,8 +198,12 @@ body,html{
     font-family:sans-serif;
     font-size: 62px;
     font-weight: 100;
-    line-height: 1.2em;
+    line-height: 0.3em;
     letter-spacing: -8px;
+}
+
+.para-margin{
+    padding-bottom: 20px;
 }
 
 .btn{
@@ -438,6 +443,11 @@ body,html{
 
 .more svg{
     width: 100vw;
+}
+
+.first-line-para{
+    width: auto;
+    height: auto;
 }
 
 .stg1{
@@ -1693,4 +1703,10 @@ body,html{
         font-weight: 200;
     }
     
+}
+
+@media screen and (min-width:640px){
+    .res-main{
+        display: none;
+    }
 }
